<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".UpdateInfoActivity">
    <ImageView
        android:id="@+id/profile_2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_icon"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/name_age"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textSize="26dp"
        android:textColor="@color/white"

        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_2"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/details"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textSize="26dp"
        android:textColor="@color/white"
        android:text="@string/details"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_age"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/cityEditText"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:hint="@string/city_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/stateEditText"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:hint="@string/state_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/cityEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/countryEditText"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:hint="@string/country_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/stateEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save_and_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:background="@color/cs_orange"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>