<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screen_bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/profile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/profile_icon"
        android:scaleType="centerCrop"/>
    <EditText
        android:id="@+id/nameEditText"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:hint="@string/first_name_hint"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintTop_toBottomOf="@+id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/yob"
        android:background="@drawable/edittext_bg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:textColor="@color/white"
        android:hint="@string/year_of_birth_hint"
        android:textColorHint="@color/white"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="4"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tap_continue"
        android:background="@drawable/edittext_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="16dp"
        android:text="Tap Continue"
        android:textStyle="italic"
        android:textColorHint="@color/white"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/yob"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        tools:text="Loading..."
        android:textStyle="italic"
        android:visibility="visible"
        android:padding="16dp"
        android:background="@drawable/edittext_bg"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tap_continue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/submit_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_bt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:background="@color/cs_orange"
        android:textColor="@color/white"/>


</androidx.constraintlayout.widget.ConstraintLayout>